<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <include layout="@layout/toolbar"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <GridView
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="120dp"
            android:horizontalSpacing="@dimen/espacio_grilla"
            android:numColumns="1"
            android:padding="@dimen/espacio_grilla"
            android:verticalSpacing="@dimen/espacio_grilla" />

        <Button
            android:id="@+id/button_recargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@android:drawable/ic_popup_sync"
            android:text="@string/recargar"
            android:onClick="recargar"
            android:visibility="invisible"/>


    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cabeceraTicket"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:paddingLeft="20dp"
                        android:text="@string/articulo"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scrollbars="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/carrito"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="8"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:text="articulo1"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/carritoPrecios"
                            android:layout_width="95dp"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:text="precio1"
                            android:textColor="@android:color/black" />

                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="20dp"
                        android:text="@string/total"
                        android:textColor="@android:color/black"
                        android:gravity="left"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/totalPrecio"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="€"
                        android:textColor="@android:color/black"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp"
                        android:gravity="left"
                        android:textStyle="bold"/>

                </LinearLayout>

                <Button
                    android:id="@+id/button_comprar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmar"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/black"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:onClick="comprar"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp">

                    <!--
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_basura"
                        android:onClick="vaciar"/>
                        -->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/texto_vaciar_carro"
                        android:onClick="vaciar"
                        android:text="@string/vaciar_carro"
                        android:textColor="@color/foreground_text"/>

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informacion_adicional"
                    android:textSize="10sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>



        </LinearLayout>
    </LinearLayout>
</LinearLayout>