<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background_floating_material_light"
    android:orientation="horizontal">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_weight="70"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/boton_izq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:onClick="anteriorImagen"
                android:rotation="180"
                android:src="@drawable/ic_next" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagen_extendida"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="ampliar" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_circulos"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>


                <ImageView
                    android:id="@+id/lupa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="50dp"
                    android:src="@drawable/ic_lupa_negra" />

            </FrameLayout>

            <ImageView
                android:id="@+id/boton_der"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                android:onClick="siguienteImagen"
                android:src="@drawable/ic_next" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/separador_izq3"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="28dp"
                        android:layout_marginLeft="26dp"
                        android:background="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="28dp"
                        android:layout_marginRight="26dp"
                        android:elevation="5dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/marca"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/foreground_text"
                            android:fontFamily="sans-serif"
                            android:text="marca"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="20">

                            <TextView
                                android:id="@+id/articulo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif"
                                android:text="articulo"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="15sp"
                                android:textColor="@color/foreground_text"/>

                        </ScrollView>


                        <TextView
                            android:id="@+id/precio_articulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/foreground_text"
                            android:fontFamily="sans-serif"
                            android:text="0€"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_carrito_peq"
                    android:drawablePadding="20dp"
                    android:onClick="alCarrito"
                    android:text="@string/annadir"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@android:color/black" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp">


                <View
                    android:id="@+id/separador_izq1"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Colores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/foreground_text"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="20dp"
                        android:text="@string/colores"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_colores"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp">


                <View
                    android:id="@+id/separador_izq2"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Tallas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/foreground_text"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="20dp"
                        android:text="@string/tallas"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_tallas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
